# kefirdrop

./: Cargo.toml  README.md
assets/presets/: abyssal_descent.toml  audio_topography.toml  bass_blossom.toml  chroma_diverge.toml  cyber_grid.toml  fractal_drift.toml  geiss_mirror.toml  glitch_matrix.toml  grid_distortion.toml  hypno_mandala.toml  infinite_tunnel.toml  interference.toml  kaleido_drop.toml  liquid_echo.toml  magnetic_field.toml  milkdrop_classic.toml  neon_swirl.toml  neon_threads.toml  plasma.toml  plasma_core.toml  prism_bloom.toml  pulse_nova.toml  spectrum.toml  spectrum_ring.toml  treble_webs.toml  tunnel.toml  vector_scope.toml  warp_speed.toml
assets/shaders/: blit.wgsl  prelude.wgsl
assets/shaders/presets/: abyssal_descent.wgsl  audio_topography.wgsl  bass_blossom.wgsl  chroma_diverge.wgsl  cyber_grid.wgsl  fractal_drift.wgsl  geiss_mirror.wgsl  glitch_matrix.wgsl  grid_distortion.wgsl  hypno_mandala.wgsl  infinite_tunnel.wgsl  interference.wgsl  kaleido_drop.wgsl  liquid_echo.wgsl  magnetic_field.wgsl  milkdrop_classic.wgsl  neon_swirl.wgsl  neon_threads.wgsl  plasma.wgsl  plasma_core.wgsl  prism_bloom.wgsl  pulse_nova.wgsl  spectrum.wgsl  spectrum_ring.wgsl  treble_webs.wgsl  tunnel.wgsl  vector_scope.wgsl  warp_speed.wgsl
docs/: ARCHITECTURE.md  PRESETS.md
src/: app.rs  config.rs  main.rs
src/audio/: analysis.rs  capture.rs  mod.rs
src/preset/: mod.rs
src/render/: mod.rs  renderer.rs  shader.rs  uniforms.rs
